Added styles according figma

--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,13 @@
+:root {
+  --light-grey: #f6f6fe;
+  --grey: #808080;
+  --dark: #2e2f42;
+  --blue: #4e75ff;
+  --light-blue: #6c8cff;
+  --red: #ff4e4e;
+  --light-red: #ff7070;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -11,4 +21,179 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  letter-spacing: 0.04em;
 }
+
+/*region Task 1*/
+
+ul {
+  padding: 0;
+}
+
+#categories {
+  list-style-type: none;
+}
+
+.item {
+  background-color: var(--light-grey);
+  padding: 16px;
+  margin-bottom: 24px;
+  border-radius: 8px;
+  max-width: 392px;
+}
+
+.item > h2 {
+  font-size: 24px;
+  line-height: 1.25;
+  letter-spacing: 0.04em;
+  font-weight: 600;
+  margin: 0 0 16px 0;
+  color: var(--dark);
+}
+
+.item > ul {
+  list-style-type: none;
+}
+
+.item > ul > li {
+  display: block;
+  border: var(--grey) solid 1px;
+  border-radius: 4px;
+  padding: 8px 16px;
+  margin-bottom: 8px;
+  color: var(--dark);
+}
+
+.item > ul > li:last-of-type {
+  margin-bottom: 0;
+}
+
+/*endregion*/
+
+/*region Task 2*/
+
+.gallery {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  gap: 5px; 
+}
+
+.gallery img {
+  width: calc(100%); 
+  height: 100%;
+}
+
+/*endregion*/
+
+/*region Task 3*/
+
+#name-input {
+  width: 360px;
+  border: var(--grey) solid 1px;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: var(--dark);
+  padding: 8px 16px;
+}
+
+h1 {
+  font-size: 24px;
+  line-height: 1.25;
+  letter-spacing: 0.04em;
+  font-weight: 600;
+  color: var(--dark);
+}
+
+/*endregion*/
+
+/*region Task 4*/
+
+label {
+  display: block;
+  font-size: 16px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: var(--dark);
+}
+
+input {
+  display: block;
+  width: 360px;
+  border: var(--grey) solid 1px;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: var(--dark);
+  padding: 8px 16px;
+  margin: 8px 0;
+}
+
+button {
+  background-color: var(--blue);
+  padding: 8px 16px;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  color: white;
+  margin: 8px 0;
+}
+
+button:hover {
+  background-color: var(--light-blue);
+}
+
+/*endregion*/
+
+/*region Task 5*/
+
+.widget {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/*endregion*/
+
+/*region Task 6*/
+
+#controls {
+  display: flex;
+  gap: 16px;
+  padding: 32px;
+  background-color: var(--light-grey);
+  margin-bottom: 16px;
+}
+
+#controls > input {
+  width: 150px;
+}
+
+#controls > button {
+  width: 120px;
+}
+
+#controls > button:last-of-type {
+  background-color: var(--red);
+}
+
+#controls > button:last-of-type:hover {
+  background-color: var(--light-red);
+}
+
+#boxes {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 44px;
+  row-gap: 44px;
+  padding: 32px;
+  background-color: var(--light-grey);
+}
+
+/*endregion*/
